--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -16,7 +16,6 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  background-image: url("background.png");
   font-family: var(--font-default);
   font-size: 18px;
   max-width: 1300px;
@@ -203,6 +202,15 @@ main {
   margin: 15px auto;
 }
 
+.modal-body-success {
+  text-align: center;
+  display: none;
+}
+
+.modal-text {
+  display: none;
+}
+
 label {
   font-family: var(--font-default);
   font-size: 17px;
@@ -247,12 +255,14 @@ input {
   border: 2px solid #e54858;
 }
 
-/* 
+
 input[data-error]::after {
-    content: attr(data-error);
-    font-size: 0.4em;
-    color: red;
-} */
+  content: attr(data-error);
+  font-size: 0.4em;
+  color: red;
+}
+
+
 .checkbox-label,
 .checkbox2-label {
   position: relative;
@@ -274,6 +284,10 @@ input[data-error]::after {
   left: -30px;
   top: -1px;
   transition: 0.3s;
+}
+
+.checkbox-label .checkbox-icon--error {
+  border: 2px solid red;
 }
 
 .checkbox-label .checkbox-icon::after,
@@ -355,6 +369,7 @@ input[data-error]::after {
 }
 
 .btn-submit,
+.btn-close,
 .btn-signup {
   background: #fe142f;
   display: block;
