--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -31,6 +31,11 @@ img {
   padding-right: 1rem;
 }
 
+.container {
+  width: 100%;
+  height: 100%;
+}
+
 .topnav {
   overflow: hidden;
   margin: 3.5%;
@@ -38,6 +43,11 @@ img {
 
 .header-logo {
   float: left;
+}
+
+.header-logo .logo {
+  width: auto;
+  height: auto;
 }
 
 .main-navbar {
@@ -125,8 +135,6 @@ main {
   margin: 1px 20px 15px;
   border-radius: 2rem;
   text-align: justify;
-
-
 }
 
 .modal-btn {
@@ -172,7 +180,6 @@ main {
 }
 
 .bground {
-  display: none;
   position: fixed;
   z-index: 1;
   left: 0;
@@ -184,9 +191,13 @@ main {
 }
 
 .content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 5% auto;
   width: 100%;
   max-width: 500px;
+  min-height: 80%;
   animation-name: modalopen;
   animation-duration: var(--modal-duration);
   background: #232323;
@@ -204,10 +215,14 @@ main {
 
 .modal-body-success {
   text-align: center;
-  display: none;
+  padding: 15px 8%;
 }
 
-.modal-text {
+.modal-text-container {
+  margin-bottom: 15px;
+}
+
+.--hide {
   display: none;
 }
 
@@ -255,15 +270,11 @@ input {
   border: 2px solid #e54858;
 }
 
-
-input[data-error]::after {
-  content: attr(data-error);
-  font-size: 0.4em;
-  color: red;
+.formData .text-control--valid {
+  border: 2px solid #279e7a;
 }
 
-
-.checkbox-label,
+.radio-label,
 .checkbox2-label {
   position: relative;
   margin-left: 36px;
@@ -271,7 +282,7 @@ input[data-error]::after {
   font-weight: normal;
 }
 
-.checkbox-label .checkbox-icon,
+.radio-label .radio-icon,
 .checkbox2-label .checkbox-icon {
   display: block;
   width: 20px;
@@ -286,11 +297,11 @@ input[data-error]::after {
   transition: 0.3s;
 }
 
-.checkbox-label .checkbox-icon--error {
+.radio-label .radio-icon--error {
   border: 2px solid red;
 }
 
-.checkbox-label .checkbox-icon::after,
+.radio-label .radio-icon::after,
 .checkbox2-label .checkbox-icon::after {
   content: "";
   width: 13px;
@@ -307,11 +318,12 @@ input[data-error]::after {
   opacity: 0;
 }
 
+.radio-input,
 .checkbox-input {
   display: none;
 }
 
-.checkbox-input:checked+.checkbox-label .checkbox-icon::after,
+.radio-input:checked+.radio-label .radio-icon::after,
 .checkbox-input:checked+.checkbox2-label .checkbox-icon::after {
   opacity: 1;
 }
