--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -13,7 +13,6 @@
 /* Landing Page */
 
 body {
-  margin: 0;
   display: flex;
   flex-direction: column;
   font-family: var(--font-default);
@@ -222,7 +221,7 @@ main {
   margin-bottom: 15px;
 }
 
-.--hide {
+.hide {
   display: none;
 }
 
@@ -539,6 +538,7 @@ input {
   height: 100%;
   display: block;
   padding: 0;
+  object-fit: cover;
 }
 
 .copyrights {
