--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -81,7 +81,7 @@ img {
   display: none;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 830px) {
   .topnav a {
     display: none;
   }
@@ -90,9 +90,7 @@ img {
     float: right;
     display: block;
   }
-}
 
-@media screen and (max-width: 768px) {
   .topnav.responsive {
     position: relative;
   }
@@ -120,7 +118,6 @@ img {
   .topnav a.icon {
     float: right;
     display: block;
-    margin-top: -15px;
   }
 }
 
@@ -489,7 +486,6 @@ input {
   color: #fff;
   position: relative;
   text-align: left;
-  min-width: 424px;
 }
 
 .hero-content::after {
@@ -559,7 +555,8 @@ footer {
   margin: 0 20px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1000px) {
+
   .hero-section {
     display: block;
     box-shadow: unset;
@@ -582,6 +579,7 @@ footer {
   .hero-headline {
     font-size: 4.5rem;
     white-space: normal;
+    text-align: center;
   }
 
   .hero-text {
@@ -605,6 +603,25 @@ footer {
     text-align: center;
   }
 }
+
+@media screen and (max-width: 425px) {
+  .header-logo {
+    max-width: 230px;
+  }
+
+  .header-logo .logo {
+    width: 100%;
+  }
+
+  .hero-headline {
+    font-size: 3.5rem;
+  }
+
+  .hero-text {
+    font-size: 1.2rem;
+  }
+}
+
 
 @keyframes modalopen {
   from {
